# Project-2-Chess-Move-Calculator

./: .gitignore  README.md  README_REPLACEMENTS.md  TODO  index.html  package-lock.json  package.json
cpp/: .clangd  CMakeLists.txt  Makefile  README.md  gen_compile_commands.sh  generate_compile_commands.py  lichess_games.pgn
cpp/include/: app.hpp  app_actions.hpp  best_move.hpp  chess_gui_helpers.hpp  chess_opening_hash.h  fen_parser.hpp  gui_assets.hpp  gui_constants.hpp  gui_input.hpp  gui_render.hpp  opening_db.hpp  opening_scan.hpp  opening_suggestion.hpp  position_db.hpp  sdl_helpers.hpp  stockfish.hpp  string_hash_map.hpp
cpp/scripts/: build_sample_pgn.py  fetch_lichess_sample_pgn.py  fetch_stockfish.py  fetch_stockfish.sh  requirements.txt
cpp/src/: app_actions.cpp  best_move.cpp  chess_gui_helpers.cpp  chess_trie.h  gui_assets.cpp  gui_input.cpp  gui_render.cpp  main.cpp  opening_db.cpp  opening_scan.cpp  opening_suggestion.cpp  pgn_parser.h  position_db.cpp  sdl_helpers.cpp  stockfish.cpp
src/: main.js  style.css
